--- a/src/app/app.html
+++ b/src/app/app.html
@@ -37,7 +37,9 @@
     height: 0;
   }
 </style>
-<div class="max-w-7xl mx-auto p-4 md:p-8 mt-6">
+<div class="max-w-7xl mx-auto p-4 md:p-8 mt-6"
+  #contentSection
+>
   <h3 class="text-green-800 text-lg md:text-2xl font-semibold mb-4">Meditation Videos</h3>
 
   <div class="relative">
@@ -80,7 +82,6 @@
 <!-- Calendar Section -->
 <div
   class="min-h-screen py-4 md:py-20 px-2 md:px-8  flex items-center"
-  #contentSection
 >
   <div
     class="w-full max-w-7xl mx-auto p-3 md:p-12 bg-white/90 rounded-xl md:rounded-3xl shadow-2xl border border-green-300/30 backdrop-blur-md flex flex-col h-full"
